authority: Fix memory leak in EnumerateActions call results handler

Policykit-1 doesn't release reference counters of GVariant data for
org.freedesktop.PolicyKit1.Authority.EnumerateActions dbus call.  This
patch fixed reference counting and following memory leak.

https://bugs.freedesktop.org/show_bug.cgi?id=88288